--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 .app {
   background-color: #282c34;
   min-height: 100vh;
@@ -10,3 +9,32 @@
   color: white;
 }
 
+.gameBtn {
+  width: 300px;
+  height: 50px;
+  margin-top: 1rem;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.Btn {
+  color: black;
+  text-transform: capitalize;
+  height: 30px;
+  width: 100px;
+  border-radius: 10px;
+  cursor: pointer;
+  outline: none;
+  border: none;
+  align-content: center;
+  background-color: white;
+  transition: 0.2s ease-in-out;
+}
+
+.Btn:hover{
+  background-color: black ;
+  color: white;
+}
+.Btn:active{
+  transform: scale(0.9);
+}
